--- a/src/git-fukd/packages.config
+++ b/src/git-fukd/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" />
+  <package id="CommandLineParser" version="2.0.119-alpha" targetFramework="net45" userInstalled="true" />
+  <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" userInstalled="true" />
 </packages>
